# DREF-NLP

./: .gitignore  Dockerfile  README.md  abbreviations.yml  appeal_document.py  document_processor.py  lessons_learned_extractor.py  lessons_learned_titles.yml  lines.py  main.py  requirements.in  requirements.txt  sectors.py  sectors.yml  utils.py
ea_parsing/: Dockerfile  requirements.txt  setup.cfg
ea_parsing/ea_parsing/: appeal_document.py  definitions.py  lessons_learned_extractor.py  lines.py  main.py  sectors.py  utils.py
ea_parsing/ea_parsing/definitions/: abbreviations.yml  lessons_learned_titles.yml  sectors.yml
ea_parsing/tests/: extract_lines.py  test_results.py
ea_parsing/tests/challenges_results/: MDR49009.yml  MDR60002.yml  MDR60003.yml  MDR65001.yml  MDRAL008.yml  MDRAO005.yml  MDRBA011.yml  MDRBD009.yml  MDRBD014.yml  MDRBD019.yml  MDRBD024.yml  MDRBD028.yml  MDRBF011.yml  MDRBO007.yml  MDRCD013.yml  MDRCM015.yml  MDRCR014.yml  MDRDM003.yml  MDRET015.yml  MDRET016.yml  MDRGN007.yml  MDRGT009.yml  MDRHN008.yml  MDRIQ007.yml  MDRKE043.yml  MDRKE045.yml  MDRKP008.yml  MDRLS004.yml  MDRMK005.yml  MDRMN005.yml  MDRMW014.yml  MDRMW015.yml  MDRMZ002.yml  MDRMZ011.yml  MDRMZ012.yml  MDRNA006.yml  MDRNA009.yml  MDRNE013.yml  MDRNG017.yml  MDRNP001.yml  (+21 more)
ea_parsing/tests/lessons_learned_results/: MDR43007.yml  MDR49002.yml  MDR65005.yml  MDR67003.yml  MDRBD028.yml  MDRBF011.yml  MDRCO008.yml  MDRCU001.yml  MDRCU002.yml  MDRDO009.yml  MDRDZ001.yml  MDRET004.yml  MDRET005.yml  MDRET016.yml  MDRGT002.yml  MDRGT013.yml  MDRHR004.yml  MDRIQ007.yml  MDRKE001.yml  (+33 more)
(+86 files in other folders)
